# ChangeLog for games-emulation/mamory
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/mamory/ChangeLog,v 1.13 2005/08/23 16:17:21 mr_bones_ Exp $

*mamory-0.2.20 (23 Aug 2005)

  23 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +mamory-0.2.20.ebuild:
  version bump

*mamory-0.2.19 (26 May 2005)

  26 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +mamory-0.2.19.ebuild:
  version bump

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> mamory-0.2.18.ebuild:
  Stable on ppc.

*mamory-0.2.18 (17 Mar 2005)

  17 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> +mamory-0.2.18.ebuild:
  version bump

  20 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> -mamory-0.2.11.ebuild,
  -mamory-0.2.12.ebuild, -mamory-0.2.14.ebuild, -mamory-0.2.15.ebuild:
  clean old ebuilds

*mamory-0.2.17 (20 Dec 2004)

  20 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +mamory-0.2.17.ebuild:
  version bump

*mamory-0.2.15 (01 Dec 2004)

  01 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +mamory-0.2.15.ebuild:
  version bump (bug #72631)

  17 Oct 2004; David Holm <dholm@gentoo.org> mamory-0.2.14.ebuild:
  Added to ~ppc.

*mamory-0.2.14 (11 Sep 2004)

  11 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org> +mamory-0.2.14.ebuild:
  version bump (bug #62827)

*mamory-0.2.12 (06 Mar 2004)

  06 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> mamory-0.2.12.ebuild:
  version bump (bug #43216)

  07 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> mamory-0.2.11.ebuild:
  more error checking/messages

*mamory-0.2.11 (27 Dec 2003)

  27 Dec 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Minati jean michel <magnet@suidzer0.org> #29993.