@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/mamory
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/mamory/ChangeLog,v 1.13 2005/08/23 16:17:21 mr_bones_ Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/mamory/ChangeLog,v 1.14 2006/07/06 07:51:53 blubb Exp $
+
+  06 Jul 2006; Simon Stelling <blubb@gentoo.org> mamory-0.2.20.ebuild:
+  added ~amd64 keyword
 
 *mamory-0.2.20 (23 Aug 2005)
 
